# gobang

./: .gitignore  README.md
gobang-client/: CMakeLists.txt  CMakeLists_linux.txt  images.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
gobang-client/.cache/clangd/index/: ACSearcher.cpp.1271E1D27D870976.idx  ACSearcher.h.2B9CA8ABEDCDB66F.idx  ChessEngine.cpp.B893A6D66E965E21.idx  ChessEngine.h.D9A7264CFD16613E.idx  PossiblePositionManager.cpp.D200BA258A42F40F.idx  chess.cpp.41C41F9FEEFC87DD.idx  chess.h.2A08DD3EEF0E4C01.idx  game.cpp.51BEDCE3384B9C83.idx  game.h.3C904C9D0DECC5EE.idx  home.cpp.E2E62BCC1A7BEC71.idx  (+21 more)
gobang-client/base/: base.h  chess.cpp  chess.h
gobang-client/build-gobang-client-Qt_5_15_8_in_PATH-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  qtcsettings.cmake
gobang-client/build-gobang-client-Qt_5_15_8_in_PATH-Debug/.qtc_clangd/: compile_commands.json
gobang-client/lib/openjson/: openjson.cpp  openjson.h
gobang-client/local/: game.cpp  game.h  game.ui  home.cpp  home.h  home.ui  robotthread.cpp  robotthread.h  settingdialog.cpp  settingdialog.h  settingdialog.ui
gobang-client/online/: lobby.cpp  lobby.h  lobby.ui  onlinegame.cpp  onlinegame.h  onlinegame.ui  recvthread.cpp  recvthread.h  tcpclient.cpp  tcpclient.h  threadpool.h
gobang-client/robot/: ACSearcher.cpp  ACSearcher.h  ChessEngine.cpp  ChessEngine.h  PossiblePositionManager.cpp  PossiblePositionManager.h  stdafx.cpp  stdafx.h
gobang-server/: CMakeLists.txt  base.h  gobangserver.cpp  gobangserver.h  main.cpp  tcpserver.cpp  tcpserver.h
(+152 files in other folders)
