cmake_minimum_required(VERSION 3.0.0)
project(gobang-server VERSION 0.1.0)
set(CMAKE_CXX_STANDARD 20)
include(CTest)
enable_testing()
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_BUILD_TYPE Debug)
set(openjson ./lib/openjson/openjson.h ./lib/openjson/openjson.cpp)
include_directories(includes)
add_executable(gobang-server ${openjson} base.h tcpserver.h tcpserver.cpp gobangserver.h gobangserver.cpp main.cpp)
set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
